tests/compile-errors/src/relative-import.stderr
error: Use-statements in USDT macros cannot contain relative imports (`super`), because the generated macros may be called from anywhere in a crate. Consider using `crate` instead.
  --> $DIR/relative-import.rs:14:9
   |
14 |     use super::Expected;
   |         ^^^^^^^^^^^^^^^

error: cannot find macro `my_provider_my_probe` in this scope
  --> $DIR/relative-import.rs:19:5
   |
19 |     my_provider_my_probe!(|| Different { x: 0 });
   |     ^^^^^^^^^^^^^^^^^^^^
